force-app/main/default/objects/Workout_Activity__c/Workout_Activity__c.object-meta.xml
<CustomObject>
    <label>Workout Activity</label>
    <nameField>
        <displayFormat>WA-{0000}</displayFormat>
        <label>Workout Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>