force-app/main/default/objects/Workout_Activity__c/fields/Total_calo_burned__c.field-meta.xml
<CustomField>
    <fullName>Total_calo_burned__c</fullName>
    <label>Total calo burned</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>