force-app/main/default/objects/Workout_Activity__c/fields/Total_time__c.field-meta.xml
<CustomField>
    <fullName>Total_time__c</fullName>
    <label>Total time (in seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>