force-app/main/default/objects/Workout_Activity__c/fields/Total_time_formatted__c.field-meta.xml
<CustomField>
    <fullName>Total_time_formatted__c</fullName>
    <label>Total time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>