force-app/main/default/objects/Workout_Activity__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <description>The workout done within this activity.</description>
    <label>Workout</label>
    <referenceTo>Workout__c</referenceTo>
    <relationshipLabel>Workout Activities</relationshipLabel>
    <relationshipName>Workout_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>